--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "primeicons": "^6.0.1",
         "primevue": "3.30.2",
         "vue": "^3.2.41",
-        "vue-router": "^4.1.5"
+        "vue-router": "^4.1.5",
+        "vuex-persistedstate": "^4.1.0"
     },
     "devDependencies": {
         "@rushstack/eslint-patch": "^1.1.4",
